--- a/testblog/mainpage/templates/mainpage/content.html
+++ b/testblog/mainpage/templates/mainpage/content.html
@@ -5,5 +5,57 @@
 {% block title %}Блог{% endblock %}
 
 {% block content %}
-
+<div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-bs-ride="carousel"
+     data-bs-interval="3000">
+    <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
+                aria-label="Slide 4"></button>
+    </div>
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <a href="{% url 'pydjango' %}"><img src="{% static 'mainpage/img/pydjango.jpg' %}" class="d-block w-100"
+                                                alt="..."></a>
+            <div class="carousel-caption d-none d-md-block">
+                <p>Мои проекты написанные на Python с использованием Django 5</p>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <a href="{% url 'pybots' %}"><img src="{% static 'mainpage/img/pybots.jpg' %}" class="d-block w-100"
+                                              alt="..."></a>
+            <div class="carousel-caption d-none d-md-block">
+                <p>Telegram боты написанные с использованием Aiogram 3</p>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <a href="{% url 'pykivy' %}"><img src="{% static 'mainpage/img/pykivy.jpg' %}" class="d-block w-100"
+                                              alt="..."></a>
+            <div class="carousel-caption d-none d-md-block">
+                <p>Кросплатформерные приложения написанные на Python Kivy/KivyMD</p>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <a href="{% url 'nocode' %}"><img src="{% static 'mainpage/img/nocode.jpg' %}" class="d-block w-100"
+                                              alt="..."></a>
+            <div class="carousel-caption d-none d-md-block">
+                <p>Игры написанные с использованием конструктора Construct 3</p>
+            </div>
+        </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+    </button>
+</div>
 {% endblock %}
