--- a/testblog/mainpage/templates/mainpage/index.html
+++ b/testblog/mainpage/templates/mainpage/index.html
@@ -5,50 +5,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Мой блог{% endblock %}</title>
-    <link rel="stylesheet" href="{% static 'mainpage/css/index.css'%}" type="text/css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </head>
 <body>
-<nav>
-  <ul>
-    <li>
-      <div class="home-icon">
-        <div class="roof">
-          <div class="roof-edge"></div>
-        </div>
-        <div class="front"></div>
-      </div>
-    </li>
-    <li>
-      <div class="about-icon">
-        <div class="head">
-          <div class="eyes"></div>
-          <div class="beard"></div>
-        </div>
-      </div>
-    </li>
-    <li>
-      <div class="work-icon">
-        <div class="paper"></div>
-        <div class="lines"></div>
-        <div class="lines"></div>
-        <div class="lines"></div>
-      </div>
-    </li>
-    <li>
-      <div class="mail-icon">
-        <div class="mail-base">
-          <div class="mail-top"></div>
-        </div>
-      </div>
-    </li>
-  </ul>
+<header>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-xxl">
+    <a class="navbar-brand" href="{% url 'content' %}">Блог логотип</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarScroll">
+      <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Проекты</a>
+          <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
+            <li><a class="dropdown-item" href="{% url 'pydjango' %}">Python Django</a></li>
+            <li><a class="dropdown-item" href="{% url 'pybots' %}">Python Aiogram</a></li>
+            <li><a class="dropdown-item" href="{% url 'pykivy' %}">Python Kivy/KivyMD</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="{% url 'nocode' %}">NoCode проекты</a></li>
+          </ul>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'bio' %}">Обо мне</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="{% url 'callback' %}">Обратная связь</a>
+        </li>
+      </ul>
+    </div>
+  </div>
 </nav>
-{% block content %}
-{% endblock %}
-</body>
+</header>
+<section>
+  {% block content %}
+  {% endblock %}
+</section>
 <footer><h4>Футер в производстве</h4></footer>
+</body>
+
 </html>
 
