--- a/testblog/mainpage/templates/mainpage/content.html
+++ b/testblog/mainpage/templates/mainpage/content.html
@@ -5,7 +5,7 @@
 {% block title %}Блог{% endblock %}
 
 {% block content %}
-<div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-bs-ride="carousel"
+<div id="carouselExampleCaptions" class="carousel slide carousel-fade my_carousel" data-bs-ride="carousel"
      data-bs-interval="3000">
     <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
