--- a/testblog/mainpage/static/mainpage/css/index.css
+++ b/testblog/mainpage/static/mainpage/css/index.css
@@ -6,8 +6,13 @@ body{
     font-family: "Poppins", sans-serif;
     font-size: 16px;
     min-widht: 320px;
+    background: rgb(255,255,255);
+    background: linear-gradient(176deg, rgba(255,255,255,1) 15%, rgba(204,204,204,1) 55%);
 }
-
+img {
+    max-width: 100%;
+    height: auto;
+}
 .poppins-light {
   font-family: "Poppins", sans-serif;
   font-weight: 300;
