--- a/testblog/mainpage/templates/mainpage/content.html
+++ b/testblog/mainpage/templates/mainpage/content.html
@@ -5,57 +5,34 @@
 {% block title %}Блог{% endblock %}
 
 {% block content %}
-<div id="carouselExampleCaptions" class="carousel slide carousel-fade my_carousel" data-bs-ride="carousel"
-     data-bs-interval="3000">
-    <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-                aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-                aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-                aria-label="Slide 3"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
-                aria-label="Slide 4"></button>
-    </div>
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-            <a href="{% url 'pydjango' %}"><img src="{% static 'mainpage/img/pydjango.jpg' %}" class="d-block w-100"
-                                                alt="..."></a>
-            <div class="carousel-caption d-none d-md-block">
-                <p>Мои проекты написанные на Python с использованием Django 5</p>
-            </div>
+<div class="container" style="color: var(--bs-emphasis-color);padding-right: 0.5px;padding-left: 0.5px;">
+    <div id="carousel-1" class="carousel slide" data-bs-ride="false">
+        <div class="carousel-inner">
+            <div class="carousel-item active"><img class="w-100 d-block"
+                                                   src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"
+                                                   alt="Slide Image"/></div>
+            <div class="carousel-item"><img class="w-100 d-block"
+                                            src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"
+                                            alt="Slide Image"/></div>
+            <div class="carousel-item"><img class="w-100 d-block"
+                                            src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"
+                                            alt="Slide Image"/></div>
+            <div class="carousel-item"><img class="w-100 d-block"
+                                            src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"
+                                            alt="Slide Image"/></div>
         </div>
-        <div class="carousel-item">
-            <a href="{% url 'pybots' %}"><img src="{% static 'mainpage/img/pybots.jpg' %}" class="d-block w-100"
-                                              alt="..."></a>
-            <div class="carousel-caption d-none d-md-block">
-                <p>Telegram боты написанные с использованием Aiogram 3</p>
-            </div>
-        </div>
-        <div class="carousel-item">
-            <a href="{% url 'pykivy' %}"><img src="{% static 'mainpage/img/pykivy.jpg' %}" class="d-block w-100"
-                                              alt="..."></a>
-            <div class="carousel-caption d-none d-md-block">
-                <p>Кросплатформерные приложения написанные на Python Kivy/KivyMD</p>
-            </div>
-        </div>
-        <div class="carousel-item">
-            <a href="{% url 'nocode' %}"><img src="{% static 'mainpage/img/nocode.jpg' %}" class="d-block w-100"
-                                              alt="..."></a>
-            <div class="carousel-caption d-none d-md-block">
-                <p>Игры написанные с использованием конструктора Construct 3</p>
-            </div>
+        <div><a class="carousel-control-prev" href="#carousel-1" role="button" data-bs-slide="prev"><span
+                class="carousel-control-prev-icon" aria-hidden="true"></span><span
+                class="visually-hidden">Previous</span></a><a class="carousel-control-next" href="#carousel-1"
+                                                              role="button" data-bs-slide="next"><span
+                class="carousel-control-next-icon" aria-hidden="true"></span><span
+                class="visually-hidden">Next</span></a></div>
+        <div class="carousel-indicators">
+            <button class="active" type="button" data-bs-target="#carousel-1" data-bs-slide-to="0"></button>
+            <button type="button" data-bs-target="#carousel-1" data-bs-slide-to="1"></button>
+            <button type="button" data-bs-target="#carousel-1" data-bs-slide-to="2"></button>
+            <button type="button" data-bs-target="#carousel-1" data-bs-slide-to="3"></button>
         </div>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-            data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-            data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-    </button>
 </div>
 {% endblock %}
