--- a/testblog/mainpage/templates/mainpage/index.html
+++ b/testblog/mainpage/templates/mainpage/index.html
@@ -1,9 +1,9 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="ru">
+<html data-bs-theme="light" lang="ru" style="font-family: 'Roboto Serif', serif;font-size: 18px;">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
     <title>{% block title %}Мой блог{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,44 +13,68 @@
 </head>
 <body>
 <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-xxl">
-        <a class="navbar-brand" href="{% url 'content' %}">Блог логотип</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarScroll">
-            <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Проекты</a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
-                        <li><a class="dropdown-item" href="{% url 'pydjango' %}">Python Django</a></li>
-                        <li><a class="dropdown-item" href="{% url 'pybots' %}">Python Aiogram</a></li>
-                        <li><a class="dropdown-item" href="{% url 'pykivy' %}">Python Kivy/KivyMD</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="{% url 'nocode' %}">NoCode проекты</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'bio' %}">Обо мне</a>
-                </li>
-            </ul>
-            <ul class="navbar-nav ms-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{% url 'callback' %}">Обратная связь</a>
-                </li>
-            </ul>
+<body style="font-family: 'Roboto Serif', serif;background: var(--bs-body-color);font-size: 16px;">
+    <nav class="navbar navbar-expand-md bg-body py-3" style="background: rgba(255,255,255,0);padding: 0px 0px;" data-bs-theme="dark">
+        <div class="container"><a class="navbar-brand d-flex align-items-center" href="#"></a><a class="border-0" href="index.html" style="color: rgb(255,255,255);position: relative;display: flex;overflow: visible;text-decoration: none;">Блог Python-разработчика</a><button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div id="navcol-1" class="collapse navbar-collapse">
+                <ul class="navbar-nav me-auto">
+                    <li class="nav-item"></li>
+                    <li class="nav-item"></li>
+                    <li class="nav-item"></li>
+                    <li class="nav-item"></li>
+                    <li class="nav-item"></li>
+                    <li class="nav-item"></li>
+                    <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#" style="margin: 5px;color: rgb(255,255,255);">Проекты</a>
+                        <div class="dropdown-menu"><a class="dropdown-item" href="#" style="font-size: 12px;">Python Django</a><a class="dropdown-item" href="#" style="font-size: 12px;">Python Aiogram</a><a class="dropdown-item" href="#" style="font-size: 12px;">Python Kivy/KivyMD</a>
+                            <div class="dropdown-divider" style="font-size: 12px;"></div><a class="dropdown-item" href="#" style="font-size: 12px;">NoCode проекты</a>
+                        </div>
+                    </li>
+                    <li class="nav-item"><a class="nav-link" href="#" style="margin: 5px;color: rgb(255,255,255);">Обо мне</a></li>
+                </ul><button class="btn btn-primary" type="button" style="transform-style: preserve-3d;">Форма обратной связи</button>
+            </div>
         </div>
-    </div>
     </nav>
 </header>
 <section>
     {% block content %}
     {% endblock %}
 </section>
-<footer><h4>Футер в производстве</h4></footer>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-</body>
-
+<footer style="background: var(--bs-body-color);font-size: 12px;">
+        <footer class="text-white bg-dark" style="font-size: 14px;border-style: none;">
+            <div class="container py-4 py-lg-5">
+                <div class="row justify-content-center">
+                    <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column item">
+                        <h3 class="fs-6 text-white" style="/*color: #ffffff;*/text-decoration: underline;">Проекты</h3>
+                        <ul class="list-unstyled" style="color: #ffffff;">
+                            <li style="color: #ffffff;"><a class="link-light" href="#" style="color: #ffffff;">Python Django</a></li>
+                            <li style="color: #ffffff;"><a class="link-light" href="#" style="color: #ffffff;">Python Aiogram</a></li>
+                            <li style="color: #ffffff;"><a class="link-light" href="#" style="color: #ffffff;">Python Kivy/KivyMD</a></li>
+                            <li style="color: #ffffff;">NoCode проекты</li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column item" style="color: #ffffff;">
+                        <h3 class="fs-6 text-white" style="/*color: #ffffff;*/text-decoration: underline;">Контакты</h3>
+                        <ul class="list-unstyled" style="color: #ffffff;">
+                            <li style="color: #ffffff;"><a class="link-light" href="#" style="color: #ffffff;">Телефон: +7 (919) 406-53-72</a></li>
+                            <li style="color: #ffffff;"><a class="link-light" href="#" style="color: #ffffff;">Email: Tima.skye@yandex.ru</a></li>
+                            <li style="color: #ffffff;"><a class="link-light" href="#" style="color: #ffffff;">Telegram: <span style="color: rgb(188, 190, 196); background-color: rgb(30, 31, 34);">@tima_skye</span></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <hr />
+                <div class="d-flex justify-content-between align-items-center pt-3" style="font-size: 20px;">
+                    <ul class="list-inline m-auto mb-0">
+                        <li class="list-inline-item"><svg class="bi bi-facebook" xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16">
+                                <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951"></path>
+                            </svg></li>
+                        <li class="list-inline-item"><svg class="bi bi-twitter" xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16">
+                                <path d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15"></path>
+                            </svg></li>
+                        <li class="list-inline-item"></li>
+                    </ul>
+                </div>
+            </div>
+        </footer>
+</footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script></body>
 </html>
-
