callback function in modal window

--- a/testblog/mainpage/templates/mainpage/content.html
+++ b/testblog/mainpage/templates/mainpage/content.html
@@ -6,18 +6,18 @@
 
 {% block content %}
 <div class="container" style="color: var(--bs-emphasis-color);padding-right: 0.5px;padding-left: 0.5px;">
-    <div id="carousel-1" class="carousel slide" data-bs-ride="false">
+    <div id="carousel-1" class="carousel slide carousel-fade" data-bs-ride="false">
         <div class="carousel-inner">
-            <div class="carousel-item active"><img class="w-100 d-block"
+            <div class="carousel-item active"><img class="w-100 d-block rounded"
                                                    src="{% static 'mainpage/img/pydjango.jpg' %}"
                                                    alt="Slide Image"/></div>
-            <div class="carousel-item"><img class="w-100 d-block"
+            <div class="carousel-item"><img class="w-100 d-block rounded"
                                             src="{% static 'mainpage/img/pykivy.jpg' %}"
                                             alt="Slide Image"/></div>
-            <div class="carousel-item"><img class="w-100 d-block"
+            <div class="carousel-item"><img class="w-100 d-block rounded"
                                             src="{% static 'mainpage/img/pybots.jpg' %}"
                                             alt="Slide Image"/></div>
-            <div class="carousel-item"><img class="w-100 d-block"
+            <div class="carousel-item"><img class="w-100 d-block rounded"
                                             src="{% static 'mainpage/img/nocode.jpg' %}"
                                             alt="Slide Image"/></div>
         </div>
