--- a/testblog/mainpage/templates/mainpage/index.html
+++ b/testblog/mainpage/templates/mainpage/index.html
@@ -13,7 +13,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{% static 'mainpage/css/index.css' %}">
 </head>
-<body>
 <body style="font-family: 'Roboto Serif', serif;background: var(--bs-body-color);font-size: 16px;">
     <nav class="navbar navbar-expand-md bg-body py-3" style="background: rgba(255,255,255,0);padding: 0px 0px;" data-bs-theme="dark">
         <div class="container"><a class="navbar-brand d-flex align-items-center" href="#"></a><a class="border-0" href="{% url 'content' %}" style="color: rgb(255,255,255);position: relative;display: flex;overflow: visible;text-decoration: none;">Блог Python-разработчика</a><button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
@@ -25,14 +24,41 @@
                         </div>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'bio' %}" style="margin: 5px;color: rgb(255,255,255);">Обо мне</a></li>
-                </ul><button class="btn btn-primary" type="button" style="transform-style: preserve-3d;">Форма обратной связи</button>
+                </ul><button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">Форма обратной связи</button>
             </div>
         </div>
     </nav>
-<section>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden='False'>
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Форма обратной связи</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <p>Заполните форму обратной связи, и я обязательно свяжусь с вами.</p>
+          <form method = "post">
+          {{ form.user_name }}<br>
+          {{ form.phone_num }}<br>
+          {{ form.email }}<br>
+          {{ form.text_inform }}<br>
+              <span>{{ error }}</span>
+      </div>
+      <div class="modal-footer">
+          {% csrf_token %}
+        <button type="submit" class="btn btn-success">Отправить</button>
+          </form>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Modal -->
+
     {% block content %}
     {% endblock %}
-</section>
+
 <footer style="background: var(--bs-body-color);font-size: 12px;">
     <footer class="text-white bg-dark" style="font-size: 14px;border-style: none;">
         <div class="container py-4 py-lg-5">
