--- a/testblog/mainpage/templates/mainpage/pybots.html
+++ b/testblog/mainpage/templates/mainpage/pybots.html
@@ -5,5 +5,12 @@
 {% block title %}Проекты Aiogram3{% endblock %}
 
 {% block content %}
-
+<div class="container">
+    <div class="row">
+        <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6" style="color: rgb(255,255,255)">
+            <p>Если на данной странице пусто, значит я активно работаю над разработкой пет-проектов, а значит в скором
+                времени смогу похвастаться ими на этой странице!</p>
+        </div>
+    </div>
+</div>
 {% endblock %}
